adding translation and dark mode to the app controlled by cubit

--- a/apply_to/lib/core/utils/lang/ar.json
+++ b/apply_to/lib/core/utils/lang/ar.json
@@ -2,5 +2,13 @@
     "hello": "مرحبا",
     "login": "تسجيل الدخول",
     "welcome": "أهلاً بك في تطبيقنا",
-    "home": "الصفحة الرئيسية"
+    "home": "الصفحة الرئيسية" ,
+    "applications" :"طلباتك",
+    "Welcom Qutaiba on Apply to APP" :"مرحباً بك يا قتيبة في تطبيق التقديم",
+    "Companys" :"الشركات",
+    "profile" : "الملف الشخصي" ,
+         "setting" :  "الضبط" ,
+"Languge" : "اللغة" ,
+  "mode":"الوضع"
+
 }
